[package]
name = "helpers"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
stellar_sdk = "0.1.4"
stellar-base = "0.5.0"
mockall = "0.13.1"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.70"
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
dotenv = "0.15.0"
openssl = "0.10.50"
rand = "0.8"
hex = "0.4.3"