[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
helpers = { path = "../helpers" }
models = { path = "../models" }
rocket = "0.5.1"
diesel = { version = "2.2.6", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres"] }
stellar_sdk = "0.1.4"
stellar-base = "0.5.0"
anyhow = "1.0.70"
uuid = "1.3"
chrono = "0.4.39"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
bigdecimal = { version = "0.4.7" }
mockall = "0.13.1"
tokio = { version = "1.30.0", features = ["full"] }